src/parse/mscgenparser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define(["./parserHelpers"], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory(require("./parserHelpers"));
  }
})(this, function(parserHelpers) {
  "use strict";
class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    program: peg$parseprogram,
  };
  let peg$startRuleFunction = peg$parseprogram;

  const peg$c0 = "{";
  const peg$c1 = "}";
  const peg$c2 = "msc";
  const peg$c3 = ",";
  const peg$c4 = ";";
  const peg$c5 = "hscale";
  const peg$c6 = "width";
  const peg$c7 = "arcgradient";
  const peg$c8 = "=";
  const peg$c9 = "wordwraparcs";
  const peg$c10 = "[";
  const peg$c11 = "]";
  const peg$c12 = "*";
  const peg$c13 = "|||";
  const peg$c14 = "...";
  const peg$c15 = "---";
  const peg$c16 = "--";
  const peg$c17 = "<->";
  const peg$c18 = "==";
  const peg$c19 = "<<=>>";
  const peg$c20 = "<=>";
  const peg$c21 = "..";
  const peg$c22 = "<<>>";
  const peg$c23 = "::";
  const peg$c24 = "<:>";
  const peg$c25 = "->";
  const peg$c26 = "=>>";
  const peg$c27 = "=>";
  const peg$c28 = ">>";
  const peg$c29 = ":>";
  const peg$c30 = "-x";
  const peg$c31 = "<-";
  const peg$c32 = "<<=";
  const peg$c33 = "<=";
  const peg$c34 = "<<";
  const peg$c35 = "<:";
  const peg$c36 = "x-";
  const peg$c37 = "note";
  const peg$c38 = "abox";
  const peg$c39 = "rbox";
  const peg$c40 = "box";
  const peg$c41 = "label";
  const peg$c42 = "idurl";
  const peg$c43 = "id";
  const peg$c44 = "url";
  const peg$c45 = "linecolor";
  const peg$c46 = "linecolour";
  const peg$c47 = "textcolor";
  const peg$c48 = "textcolour";
  const peg$c49 = "textbgcolor";
  const peg$c50 = "textbgcolour";
  const peg$c51 = "arclinecolor";
  const peg$c52 = "arclinecolour";
  const peg$c53 = "arctextcolor";
  const peg$c54 = "arctextcolour";
  const peg$c55 = "arctextbgcolor";
  const peg$c56 = "arctextbgcolour";
  const peg$c57 = "arcskip";
  const peg$c58 = "\"";
  const peg$c59 = "\\\"";
  const peg$c60 = "/*";
  const peg$c61 = "*/";
  const peg$c62 = "//";
  const peg$c63 = "#";
  const peg$c64 = ".";
  const peg$c65 = "true";
  const peg$c66 = "false";
  const peg$c67 = "on";
  const peg$c68 = "off";

  const peg$r0 = /^[A-Za-z_0-9]/;
  const peg$r1 = /^[ \t]/;
  const peg$r2 = /^[\r\n]/;
  const peg$r3 = /^[^\r\n]/;
  const peg$r4 = /^[0-9]/;
  const peg$r5 = /^[0-1]/;

  const peg$e0 = peg$literalExpectation("{", false);
  const peg$e1 = peg$literalExpectation("}", false);
  const peg$e2 = peg$literalExpectation("msc", true);
  const peg$e3 = peg$literalExpectation(",", false);
  const peg$e4 = peg$literalExpectation(";", false);
  const peg$e5 = peg$otherExpectation("option");
  const peg$e6 = peg$literalExpectation("hscale", true);
  const peg$e7 = peg$literalExpectation("width", true);
  const peg$e8 = peg$literalExpectation("arcgradient", true);
  const peg$e9 = peg$literalExpectation("=", false);
  const peg$e10 = peg$literalExpectation("wordwraparcs", true);
  const peg$e11 = peg$otherExpectation("entity");
  const peg$e12 = peg$literalExpectation("[", false);
  const peg$e13 = peg$literalExpectation("]", false);
  const peg$e14 = peg$literalExpectation("*", false);
  const peg$e15 = peg$otherExpectation("empty row");
  const peg$e16 = peg$literalExpectation("|||", false);
  const peg$e17 = peg$literalExpectation("...", false);
  const peg$e18 = peg$otherExpectation("---");
  const peg$e19 = peg$literalExpectation("---", false);
  const peg$e20 = peg$otherExpectation("bi-directional arrow");
  const peg$e21 = peg$literalExpectation("--", false);
  const peg$e22 = peg$literalExpectation("<->", false);
  const peg$e23 = peg$literalExpectation("==", false);
  const peg$e24 = peg$literalExpectation("<<=>>", false);
  const peg$e25 = peg$literalExpectation("<=>", false);
  const peg$e26 = peg$literalExpectation("..", false);
  const peg$e27 = peg$literalExpectation("<<>>", false);
  const peg$e28 = peg$literalExpectation("::", false);
  const peg$e29 = peg$literalExpectation("<:>", false);
  const peg$e30 = peg$otherExpectation("left to right arrow");
  const peg$e31 = peg$literalExpectation("->", false);
  const peg$e32 = peg$literalExpectation("=>>", false);
  const peg$e33 = peg$literalExpectation("=>", false);
  const peg$e34 = peg$literalExpectation(">>", false);
  const peg$e35 = peg$literalExpectation(":>", false);
  const peg$e36 = peg$literalExpectation("-x", true);
  const peg$e37 = peg$otherExpectation("right to left arrow");
  const peg$e38 = peg$literalExpectation("<-", false);
  const peg$e39 = peg$literalExpectation("<<=", false);
  const peg$e40 = peg$literalExpectation("<=", false);
  const peg$e41 = peg$literalExpectation("<<", false);
  const peg$e42 = peg$literalExpectation("<:", false);
  const peg$e43 = peg$literalExpectation("x-", true);
  const peg$e44 = peg$otherExpectation("box");
  const peg$e45 = peg$literalExpectation("note", true);
  const peg$e46 = peg$literalExpectation("abox", true);
  const peg$e47 = peg$literalExpectation("rbox", true);
  const peg$e48 = peg$literalExpectation("box", true);
  const peg$e49 = peg$otherExpectation("attribute name");
  const peg$e50 = peg$literalExpectation("label", true);
  const peg$e51 = peg$literalExpectation("idurl", true);
  const peg$e52 = peg$literalExpectation("id", true);
  const peg$e53 = peg$literalExpectation("url", true);
  const peg$e54 = peg$literalExpectation("linecolor", true);
  const peg$e55 = peg$literalExpectation("linecolour", true);
  const peg$e56 = peg$literalExpectation("textcolor", true);
  const peg$e57 = peg$literalExpectation("textcolour", true);
  const peg$e58 = peg$literalExpectation("textbgcolor", true);
  const peg$e59 = peg$literalExpectation("textbgcolour", true);
  const peg$e60 = peg$literalExpectation("arclinecolor", true);
  const peg$e61 = peg$literalExpectation("arclinecolour", true);
  const peg$e62 = peg$literalExpectation("arctextcolor", true);
  const peg$e63 = peg$literalExpectation("arctextcolour", true);
  const peg$e64 = peg$literalExpectation("arctextbgcolor", true);
  const peg$e65 = peg$literalExpectation("arctextbgcolour", true);
  const peg$e66 = peg$literalExpectation("arcskip", true);
  const peg$e67 = peg$otherExpectation("double quoted string");
  const peg$e68 = peg$literalExpectation("\"", false);
  const peg$e69 = peg$literalExpectation("\\\"", false);
  const peg$e70 = peg$anyExpectation();
  const peg$e71 = peg$otherExpectation("identifier");
  const peg$e72 = peg$classExpectation([["A", "Z"], ["a", "z"], "_", ["0", "9"]], false, false, false);
  const peg$e73 = peg$otherExpectation("whitespace");
  const peg$e74 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e75 = peg$otherExpectation("lineend");
  const peg$e76 = peg$classExpectation(["\r", "\n"], false, false, false);
  const peg$e77 = peg$literalExpectation("/*", false);
  const peg$e78 = peg$literalExpectation("*/", false);
  const peg$e79 = peg$literalExpectation("//", false);
  const peg$e80 = peg$literalExpectation("#", false);
  const peg$e81 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e82 = peg$otherExpectation("comment");
  const peg$e83 = peg$otherExpectation("number");
  const peg$e84 = peg$otherExpectation("cardinal");
  const peg$e85 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e86 = peg$otherExpectation("real");
  const peg$e87 = peg$literalExpectation(".", false);
  const peg$e88 = peg$otherExpectation("boolean");
  const peg$e89 = peg$literalExpectation("true", true);
  const peg$e90 = peg$literalExpectation("false", true);
  const peg$e91 = peg$literalExpectation("on", true);
  const peg$e92 = peg$literalExpectation("off", true);
  const peg$e93 = peg$classExpectation([["0", "1"]], false, false, false);

  function peg$f0(pre, declarations) {
    declarations.entities = declarations.entities || [];
    parserHelpers.checkForUndeclaredEntities(declarations.entities, declarations.arcs);

    declarations = {meta: getMetaInfo(), ...declarations};

    if (pre.length > 0) {
        declarations = {precomment: pre, ...declarations};
    }
    return declarations;
  }
  function peg$f1(options, entities, arcs) {
    var lDeclarationList = {};
    if (options) {
        lDeclarationList.options = options;
    }
    if (entities) {
        lDeclarationList.entities = entities;
    }
    if (arcs) {
        lDeclarationList.arcs = arcs;
    }
    return lDeclarationList;
  }
  function peg$f2(o) {return o  }
  function peg$f3(o) {return o  }
  function peg$f4(options) {
    // make the option array into an options object
    return options[0]
        .concat(options[1])
        .reduce((pAll, pCurrent) => Object.assign(pAll, pCurrent), {});
  }
  function peg$f5(name, value) {
    return parserHelpers.nameValue2Option(name, value);
  }
  function peg$f6(name, value) {
    return parserHelpers.nameValue2Option(name, parserHelpers.flattenBoolean(value));
  }
  function peg$f7(e) {return e  }
  function peg$f8(e) {return e  }
  function peg$f9(el) {
    return el[0].concat(el[1]);
  }
  function peg$f10(name, a) {return a  }
  function peg$f11(name, attrList) {
    return {name:name, ...attrList};
  }
  function peg$f12(name, a) {return a  }
  function peg$f13(name, attrList) {
    if (parserHelpers.isMscGenKeyword(name)){
      error("Keywords aren't allowed as entity names (embed them in quotes if you need them)");
    }
    return {name:name, ...attrList};
  }
  function peg$f14(a) {return a  }
  function peg$f15(a) {return a  }
  function peg$f16(a) {return a  }
  function peg$f17(al) {
    return al[0].concat(al[1]);
  }
  function peg$f18(a) {return a  }
  function peg$f19(a) {return a  }
  function peg$f20(a) {return a  }
  function peg$f21(a, al) {return al  }
  function peg$f22(a, al) {
    return {...a, ...al};
  }
  function peg$f23(kind) {return {kind:kind}  }
  function peg$f24(kind) {return {kind:kind}  }
  function peg$f25(from, kind, to) {return {kind: kind, from:from, to:to}  }
  function peg$f26(kind, to) {return {kind:kind, from: "*", to:to}  }
  function peg$f27(from, kind) {return {kind:kind, from: from, to:"*"}  }
  function peg$f28(from, kind) {return {kind:kind, from: from, to:"*"}  }
  function peg$f29(kind) {return kind.toLowerCase()  }
  function peg$f30(a) {return a  }
  function peg$f31(a) {return a  }
  function peg$f32(attributes) {
    // transform the array of attributes into an object
    return attributes[0]
        .concat(attributes[1])
        .reduce((pAll, pCurrent) => Object.assign(pAll, pCurrent), {});
  }
  function peg$f33(name, value) {
    var lAttribute = {};
    lAttribute[name.toLowerCase().replace("colour", "color")] = value;
    return lAttribute
  }
  function peg$f34(s) {return s.join("")  }
  function peg$f35(c) {return c  }
  function peg$f36(letters) {return letters.join("")  }
  function peg$f37(c) {return c  }
  function peg$f38(c) {return c  }
  function peg$f39(c) {return c  }
  function peg$f40(start, com, end) {
    return start + com.join("") + end
  }
  function peg$f41(start, com) {
    return start + com.join("")
  }
  function peg$f42(s) {    return s;  }
  function peg$f43(i) {    return i.toString();  }
  function peg$f44(s) {    return s.toString();  }
  function peg$f45(digits) {    return parseInt(digits.join(""), 10);  }
  function peg$f46(digits) {    return parseFloat(digits.join(""));  }
  function peg$f47(bs) {return bs;  }
  function peg$f48(b) {return b.toString();  }
  function peg$f49(s) {    return s;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsestarttoken();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 123) {
        s4 = peg$c0;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = peg$parsedeclarationlist();
        s7 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 125) {
          s8 = peg$c1;
          peg$currPos++;
        } else {
          s8 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
        if (s8 !== peg$FAILED) {
          s9 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f0(s1, s6);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestarttoken() {
    let s0;

    s0 = input.substr(peg$currPos, 3);
    if (s0.toLowerCase() === peg$c2) {
      peg$currPos += (3);
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }

    return s0;
  }

  function peg$parsedeclarationlist() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseoptionlist();
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    s2 = peg$parseentitylist();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parsearclist();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    peg$savedPos = s0;
    s0 = peg$f1(s1, s2, s3);

    return s0;
  }

  function peg$parseoptionlist() {
    let s0, s1, s2, s3, s4, s5;
